k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workmates-deployment
  labels:
    app: workmates-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workmates
  template:
    metadata:
      labels:
        app: workmates
    spec:
      containers:
      - name: workmates-container
        image: facundor/workmates:1.0.1
        ports:
        - containerPort: 80
