k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: workmates-service
spec:
  selector:
    app: workmates
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
