k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: workmates-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: workmates.k8s.fluxit.com.ar
    http:
      paths:
      - backend:
          serviceName: workmates-service
          servicePort: 80
        path: /
